--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -9,7 +9,16 @@ publish_mode: editorial_workflow # For Drafts
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
-    folder: "posts" # The path to the folder where the documents are stored
+    folder: "posts/blog" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
+      - {label: "Body", name: "body", widget: "markdown"}
+  - name: "sensiblog" # Used in routes, e.g., /admin/collections/blog
+    label: "Sensiblog" # Used in the UI
+    folder: "posts/sensiblog" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
