--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -7,9 +7,9 @@ public_folder: "/uploads" # Where the media files can be accesed from the server
 publish_mode: editorial_workflow # For Drafts
 
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "posts/blog" # The path to the folder where the documents are stored
+  - name: "about" # Used in routes, e.g., /admin/collections/blog
+    label: "About" # Used in the UI
+    folder: "content/about" # The path to the folder where the documents are stored
     create: false # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
@@ -18,7 +18,7 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "sensiblog" # Used in routes, e.g., /admin/collections/blog
     label: "Sensiblog" # Used in the UI
-    folder: "posts/sensiblog" # The path to the folder where the documents are stored
+    folder: "content/sensiblog" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
