--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -35,7 +35,7 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
       - {label: "Tags", name: "tags", widget: "list"}
-      - {label: "Language", name: "language", widget: "select", options:["spanish","english" ]}
+      - {label: "Language", name: "language", widget: "select", options: - { label: "Español", value: "spa" } - { label: "English", value: "eng" }}
       - {label: "Id", name: "id", widget: "number"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
