--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -25,7 +25,7 @@ collections:
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Body", name: "test1", widget: "markdown"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - { label: 'Blog post content', name: 'body', widget: 'markdown' }
   - name: "sensiblog" # Used in routes, e.g., /admin/collections/blog
