--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -10,24 +10,25 @@ collections:
   - name: "about" # Used in routes, e.g., /admin/collections/blog
     label: "About" # Used in the UI
     folder: "content/about" # The path to the folder where the documents are stored
-    create: false # Allow users to create new documents in this collection
+    create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Castellano", name: "body", widget: "markdown"}
+      - { label: "English", name: "body_eng", widget: "markdown" }
   - name: "feed" # Used in routes, e.g., /admin/collections/blog
     label: "Feed" # Used in the UI
     folder: "content/feed" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
-      - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
-      - {label: "Body", name: "test1", widget: "markdown"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - { label: 'Blog post content', name: 'body', widget: 'markdown' }
+      - {label: "Tags", name: "tags", widget: "list"}
+      - {label: "Publish Date", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
+      - {label: "Castellano", name: "body", widget: "markdown"}
+      - { label: "English", name: "body_eng", widget: "markdown" }
   - name: "sensiblog" # Used in routes, e.g., /admin/collections/blog
     label: "Sensiblog" # Used in the UI
     folder: "content/sensiblog" # The path to the folder where the documents are stored
@@ -35,9 +36,32 @@ collections:
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
-      - {label: "Tags", name: "tags", widget: "list"}
-      - {label: "Language", name: "language", widget: "select", options: ["spanish","english"]}
-      - {label: "Id", name: "id", widget: "number"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Tags", name: "tags", widget: "list"}
+      - {label: "Publish Date", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
+      - {label: "Castellano", name: "body", widget: "markdown"}
+      - { label: "English", name: "body_eng", widget: "markdown" }
+  - name: "posible" # Used in routes, e.g., /admin/collections/blog
+    label: "Posible" # Used in the UI
+    folder: "content/posible" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Stock", name: "stock", widget: "number"}
+      - {label: "Price", name: "price", widget: "number"}
+      - {label: "Publish Date", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
+      - {label: "Castellano", name: "body", widget: "markdown"}
+      - { label: "English", name: "body_eng", widget: "markdown" }
+  - name: "modals" # Used in routes, e.g., /admin/collections/blog
+    label: "Modals" # Used in the UI
+    folder: "content/modals" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Publish Date", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
+      - {label: "Castellano", name: "body", widget: "markdown"}
+      - { label: "English", name: "body_eng", widget: "markdown" }  
