--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,9 +14,9 @@ collections:
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - {label: "Fecha de publicación", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
-      - {label: "Titulo", name: "titulo", widget: "string"}
+      - {label: "Titulo", name: "title", widget: "string"}
       - {label: "Castellano", name: "body", widget: "markdown"}
-      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Title", name: "title_eng", widget: "string"}
       - {label: "English", name: "body_eng", widget: "markdown"}
   - name: "feed" # Used in routes, e.g., /admin/collections/blog
     label: "Feed" # Used in the UI
@@ -27,9 +27,9 @@ collections:
       - {label: "Fecha de publicación", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Tags", name: "tags", widget: "list"}
-      - {label: "Titulo", name: "titulo", widget: "string"}
+      - {label: "Titulo", name: "title", widget: "string"}
       - {label: "Castellano", name: "body", widget: "markdown"}
-      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Title", name: "title_eng", widget: "string"}
       - {label: "English", name: "body_eng", widget: "markdown"}
   - name: "sensiblog" # Used in routes, e.g., /admin/collections/blog
     label: "Sensiblog" # Used in the UI
@@ -40,9 +40,9 @@ collections:
       - {label: "Fecha de publicación", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Tags", name: "tags", widget: "list"}
-      - {label: "Titulo", name: "titulo", widget: "string"}
+      - {label: "Titulo", name: "title", widget: "string"}
       - {label: "Castellano", name: "body", widget: "markdown"}
-      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Title", name: "title_eng", widget: "string"}
       - {label: "English", name: "body_eng", widget: "markdown"}
   - name: "posible" # Used in routes, e.g., /admin/collections/blog
     label: "Posible" # Used in the UI
@@ -54,9 +54,9 @@ collections:
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Stock", name: "stock", widget: "number"}
       - {label: "Price", name: "price", widget: "number"}
-      - {label: "Titulo", name: "titulo", widget: "string"}
+      - {label: "Titulo", name: "title", widget: "string"}
       - {label: "Castellano", name: "body", widget: "markdown"}
-      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Title", name: "title_eng", widget: "string"}
       - {label: "English", name: "body_eng", widget: "markdown"}
   - name: "modals" # Used in routes, e.g., /admin/collections/blog
     label: "Modals" # Used in the UI
@@ -66,7 +66,7 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Fecha de publicación", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Titulo", name: "titulo", widget: "string"}
+      - {label: "Titulo", name: "title", widget: "string"}
       - {label: "Castellano", name: "body", widget: "markdown"}
-      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Title", name: "title_eng", widget: "string"}
       - {label: "English", name: "body_eng", widget: "markdown"}  
