--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,7 +4,7 @@ backend:
 
 media_folder: "public/uploads" # Where media files will be stored
 public_folder: "/uploads" # Where the media files can be accesed from the server
-publish_mode: editorial_workflow # For Drafts
+# publish_mode: editorial_workflow # For Drafts
 
 collections:
   - name: "about" # Used in routes, e.g., /admin/collections/blog
@@ -15,8 +15,8 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Fecha de publicación", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
       - {label: "Titulo", name: "title", widget: "string"}
-      - {label: "Castellano", name: "body", widget: "markdown"}
-      - {label: "English", name: "body_eng", widget: "markdown"}
+      - {label: "Cuerpo (Castellano)", name: "body", widget: "markdown"}
+      - {label: "Cuerpo (English)", name: "body_eng", widget: "markdown"}
   - name: "feed" # Used in routes, e.g., /admin/collections/blog
     label: "Feed" # Used in the UI
     folder: "content/feed" # The path to the folder where the documents are stored
@@ -27,9 +27,7 @@ collections:
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Titulo", name: "title", widget: "string"}
-      - {label: "Castellano", name: "body", widget: "markdown"}
-      - {label: "Title", name: "title_eng", widget: "string"}
-      - {label: "English", name: "body_eng", widget: "markdown"}
+      - {label: "Cuerpo", name: "body", widget: "markdown"}
   - name: "sensiblog" # Used in routes, e.g., /admin/collections/blog
     label: "Sensiblog" # Used in the UI
     folder: "content/sensiblog" # The path to the folder where the documents are stored
@@ -40,9 +38,9 @@ collections:
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Titulo", name: "title", widget: "string"}
-      - {label: "Castellano", name: "body", widget: "markdown"}
+      - {label: "Cuerpo (Castellano)", name: "body", widget: "markdown"}
       - {label: "Title", name: "title_eng", widget: "string"}
-      - {label: "English", name: "body_eng", widget: "markdown"}
+      - {label: "Cuerpo (English)", name: "body_eng", widget: "markdown"}
   - name: "posible" # Used in routes, e.g., /admin/collections/blog
     label: "Posible" # Used in the UI
     folder: "content/posible" # The path to the folder where the documents are stored
@@ -54,9 +52,9 @@ collections:
       - {label: "Stock", name: "stock", widget: "number"}
       - {label: "Price", name: "price", widget: "number"}
       - {label: "Titulo", name: "title", widget: "string"}
-      - {label: "Castellano", name: "body", widget: "markdown"}
+      - {label: "Cuerpo (Castellano)", name: "body", widget: "markdown"}
       - {label: "Title", name: "title_eng", widget: "string"}
-      - {label: "English", name: "body_eng", widget: "markdown"}
+      - {label: "Cuerpo (English)", name: "body_eng", widget: "markdown"}
   - name: "modals" # Used in routes, e.g., /admin/collections/blog
     label: "Modals" # Used in the UI
     folder: "content/modals" # The path to the folder where the documents are stored
@@ -66,5 +64,5 @@ collections:
       - {label: "Fecha de publicación", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
       - {label: "Titulo", name: "title", widget: "string"}
-      - {label: "Castellano", name: "body", widget: "markdown"}
-      - {label: "English", name: "body_eng", widget: "markdown"}  
+      - {label: "Cuerpo (Castellano)", name: "body", widget: "markdown"}
+      - {label: "Cuerpo (English)", name: "body_eng", widget: "markdown"}
