--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -36,6 +36,7 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Fecha de publicación", name: "date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: "HH:mm", format: "LLL"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Categoría", name: "category", widget: "string"}
       - {label: "Tags", name: "tags", widget: "list"}
       - {label: "Titulo", name: "title", widget: "string"}
       - {label: "Cuerpo (Castellano)", name: "body", widget: "markdown"}
