--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^8.0.3",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "autoprefixer": "^10.4.7",
