--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "dependencies": {
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
-    "next": "latest",
+    "next": "^12.1.6",
     "phosphor-react": "^1.4.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-markdown": "^8.0.3",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0"
