--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.0.22",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "^12.1.6",
@@ -14,7 +15,8 @@
     "react-dom": "^18.1.0",
     "react-markdown": "^8.0.3",
     "remark": "^14.0.1",
-    "remark-html": "^15.0.0"
+    "remark-html": "^15.0.0",
+    "three": "^0.141.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
