--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@react-three/fiber": "^8.0.22",
+    "@types/three": "^0.141.0",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "^12.1.6",
