--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-three/drei": "^9.13.0",
     "@react-three/fiber": "^8.0.22",
     "@types/three": "^0.141.0",
     "date-fns": "^2.11.1",
