--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.1.0",
     "react-markdown": "^8.0.3",
     "remark": "^14.0.1",
+    "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.0",
     "three": "^0.141.0"
   },
