--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-markdown": "^8.0.3",
+    "react-scroll-sync": "^0.11.0",
     "rehype-raw": "^6.1.1",
     "remark": "^14.0.1",
     "remark-gfm": "^3.0.1",
@@ -26,6 +27,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
+    "@types/react-scroll-sync": "^0.8.4",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
