--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@react-three/drei": "^9.13.0",
     "@react-three/fiber": "^8.0.22",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@types/three": "^0.141.0",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
