--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "homepage": "/about",
+  "homepage": "./about",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
